# NimbleInk

./: .gitignore  LICENSE.txt  animator.py  build  build-deps  drawimage.py  flags.txt  imagelister.py  imagezipper.py  todo.txt  view.py
c/: .gitignore  archive.c  archive.h  build  build-deps  english.c  filetype.c  filetype.h  flags.txt  image-libjpeg.c  image-libjpeg.h  image.c  image.h  legalese.txt  main-imagedebug.c  main.c  zipper.c  zipper.h
c/dep/jpeg-8c/: Makefile  config.status  libtool
c/src/: archive-unrar.c  archive-unrar.h  archive-unzip.c  archive-unzip.h  archive.c  archive.h  cpuimage.c  english.h  filetype.c  filetype.h  glimage.c  glimage.h  glview.c  glview.h  image-giflib.c  image-giflib.h  image-libjpeg.c  image-libjpeg.h  image-pnm.c  image-pnm.h  image-sdl_image.c  image-sdl_image.h  image.c  loop-sdl.c  loop.h  main-imagedebug.c  main.c  reference.c  stringutils.c  stringutils.h  zipper.c  zipper.h
py/: imagelister.py  imagezipper.py  setup.py
src/: CMakeLists.txt  archive-unrar.c  archive-unrar.h  archive-unzip.c  archive-unzip.h  archive.c  archive.h  cpuimage.c  cpuimage.h  english.c  filetype.c  filetype.h  glimage.c  glimage.h  glview.c  image-giflib.c  image-libjpeg.c  image-libpng.c  image-libpng.h  image-pnm.c  image-sdl_image.c  image-sdl_image.h  image.h  inklog.c  inklog.h  loop-common.c  loop-sdl.c  loop.h  lua-bind.c  lua-bind.h  main-imagedebug.c  main-sorttest.c  main.c  path.h  reference.c  reference.h  stringutils.c  timing.h  zipper.c  zipper.h
src/oldsrc/: cpuimage.h  filetype.c  glimage.c  glview.c  image-libjpeg.h  image-sdl_image.c  loop.h  main.c  path.h  stringutils.h
